--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/1cfca8fc51.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Background Effect -->
@@ -13,11 +14,11 @@
     <!-- Site Header -->
     <header class="site-header">
         <nav class="site-header-nav">
-            <div>Home</div>
-            <div>About</div>
-            <div>Projects / Work</div>
-            <div>Skills / Tech Stack</div>
-            <div>Contact</div>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Projects / Work</a>
+            <a href="#">Skills / Tech Stack</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 
@@ -35,6 +36,13 @@
             See Portfolio
         </button>
         </div>
+
+    <!-- Socials -->
+    <div class="socials">
+    <a class="linkedin" href="https://www.linkedin.com/in/gustavkallin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+    <a class="github" href="https://github.com/yasariz" target="_blank"><i class="fa-brands fa-github"></i></a>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
