--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!-- Site Header -->
     <header class="site-header">
         <nav class="site-header-nav">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Projects / Work</a>
-            <a href="#">Skills / Tech Stack</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="#">Projects</a>
+            <a href="#">Skills</a>
             <a href="#">Contact</a>
         </nav>
     </header>
@@ -25,8 +25,8 @@
     <!-- Presentation -->
     <div class="presentation">
         <div class="typewriter-container">
-            <span class="typed-text" id="typed"></span>
-            <span class="cursor"></span>
+        <span class="typed-text" id="typed"><span class="cursor"></span></span>
+
         </div>
         <div>
             <span id="subtitle" class="fade-in-hidden">Full-Stack Developer based in Västerås</span>
@@ -39,8 +39,8 @@
 
     <!-- Socials -->
     <div class="socials">
-    <a class="linkedin" href="https://www.linkedin.com/in/gustavkallin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-    <a class="github" href="https://github.com/yasariz" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a class="linkedin" href="https://www.linkedin.com/in/gustavkallin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a class="github" href="https://github.com/yasariz" target="_blank"><i class="fa-brands fa-github"></i></a>
     </div>
 
     <script src="script.js"></script>
