--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <nav class="site-header-nav">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="#">Skills</a>
             <a href="#">Contact</a>
         </nav>
@@ -35,10 +35,7 @@
   </div>
 </div>
 
-            
-
-
-        <!-- Socials -->
+    <!-- Socials -->
     <div class="socials">
         <a class="linkedin" href="https://www.linkedin.com/in/gustavkallin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <a class="github" href="https://github.com/yasariz" target="_blank"><i class="fa-brands fa-github"></i></a>
