--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="site-header-nav">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="#">Skills</a>
             <a href="#">Contact</a>
         </nav>
@@ -32,9 +32,11 @@
             <span id="subtitle" class="fade-in-hidden">Full-Stack Developer based in Västerås</span>
         </div>
         <div>
-        <button id="button" class="fade-in-hidden presentation-button">
-            See Portfolio
-        </button>
+        <a href="projects.html">
+            <button id="button" class="fade-in-hidden presentation-button">
+                See Portfolio
+            </button>
+        </a>
         </div>
 
     <!-- Socials -->
